# ncov-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md  temp.py
src/: main.rs
src/data/: domain.rs
src/service/: http.rs
src/tui/: mod.rs  siv.rs
