[package]
name = "ncov-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["json"]}
serde = {version =  "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = {version = "1.12.0", features = ["full"]}
#sqlx = {version = "0.5.9", features = ["json","runtime-tokio-rustls"]}
cursive = "0.17.0-alpha.0"
futures="0.3.17"